# DaveBot

./: .env.example  .gitignore  README.md  dave_data.json  pyproject.toml
eval/: sample_eval.json
src/daverag/: __init__.py  api.py  classification.py  cli.py  config.py  data.py  embeddings.py  eval.py  generation.py  index.py  normalization.py  retrieval.py  schemas.py  service.py
src/daverag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/daverag/frontend/: app.js  index.html  styles.css
tests/: test_pipeline.py
